no we can create the index for a specified language